# EpubEditor

./: .gitignore  README.md  config_example.toml  ee.spec  pyproject.toml
epubeditor/: __init__.py  cli.py  config.py  console_prompt.py  input_handler.py  main.py  prompt_input.py
epubeditor/editor/: book_renamer.py  cover.py  html_formatter.py  main.py  sort.py  template_handler.py
epubeditor/merge_books/: cp_meta.py  create_meta.py  get_data_from_user.py  main.py
epubeditor/metadata_editor/: add_metadata.py  create_sort.py  get_metadata.py  main.py  multiple_editor.py  remove_metadata.py  set_metadata.py
epubeditor/open_book/: completer.py  files_operations.py  functions.py  main.py  merge.py  multiple_renamer.py  scripts.py  split.py
epubeditor/scripts/: __init__.py  clean_doubled_xml_declarations.py  split_by_titles.py  toc_from_titles.py
epubeditor/toc/: completer.py  functions.py  main.py  nav_functions.py  sort_spine.py  sync_toc_and_nav.py
scripts/: TITLE_to_Title.py  __init__.py  fix_search_floor.py
src/: cli.py  console_prompt.py  main.py  namespaces.py  prompt_input.py
src/editor/: book_renamer.py  cover.py  main.py  sort.py
src/metadata_editor/: add_metadata.py  create_sort.py  get_metadata.py  main.py  multiple_editor.py  remove_metadata.py  set_metadata.py
src/open_book/: completer.py  files_operations.py  functions.py  main.py  merge.py  multiple_renamer.py  search.py  split.py
src/toc/: completer.py  functions.py  main.py  nav_functions.py  sort_spine.py  sync_toc_and_nav.py
