[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EpubEditor"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.scripts]
epubeditor = "src.cli:main"

[tool.setuptools]
packages = [
	"src",
	"src.editor",
	"src.metadata_editor",
	"src.open_book"
]
py-modules = [
	"src.cli"
]

[dependency-groups]
dev = []
