[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EpubEditor"
version = "0.0.6"
description = "Cli tool for editing epub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.scripts]
epubeditor = "epubeditor.cli:main"

[tool.setuptools]
packages = ["epubeditor"]

[dependency-groups]
dev = []
