[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EpubEditor"
version = "0.1.0b2"
description = "Cli tool for editing epub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.scripts]
epubeditor = "epubeditor.cli:main"

[tool.setuptools]
packages = [
	"epubeditor",
	"epubeditor.editor",
	"epubeditor.open_book",
	"epubeditor.metadata_editor",
	"epubeditor.toc",
	"epubeditor.merge_books",
	"epubeditor.scripts"
]

[dependency-groups]
dev = []
